--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,6 +38,8 @@ Astro.response.headers.set('cache-control', 'max-age=60')
 		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
 		<p class="instructions">
 			Current date: {new Date().toLocaleString()}
+			<br/>
+			Random value: {Math.random()}
 		</p>
 		<ul role="list" class="link-card-grid">
 			<Card
