--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
-Astro.response.headers.set('x-ssg', 'true')
+Astro.response.headers.set('x-isr', 'true')
 Astro.response.headers.set('cache-control', 'max-age=60')
 ---
 
